fixed button vertical alignment with flexbox

--- a/styles.css
+++ b/styles.css
@@ -16,18 +16,23 @@ a {
 a.active {
     color: #000;
 }
+.button-container {
+    display: flex;
+    align-content: center;
+}
 .button {
     color: #FFF;
     background-color: #000;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     border: none;
-    display: block;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0;
     height: 40px;
     width: 100%;
-    border-radius: 20px;;
+    border-radius: 20px;
 }
 .content {
     color: #69696a;
